@@ -672,6 +672,19 @@
     }
 },
 {
+    "pk": 7,
+    "model": "auth.group",
+    "fields": {
+        "name": "Corporate Editor",
+        "permissions": [
+            ["access_admin", "wagtailadmin", "admin"],
+            ["add_image", "wagtailimages", "image"],
+            ["change_image", "wagtailimages", "image"],
+            ["delete_image", "wagtailimages", "image"]
+        ]
+    }
+},
+{
     "pk": 1,
     "model": "wagtailcore.grouppagepermission",
     "fields": {
@@ -723,6 +736,24 @@
         "group": ["Event moderators"],
         "page": 3,
         "permission_type": "lock"
+    }
+},
+{
+    "pk": 7,
+    "model": "wagtailcore.grouppagepermission",
+    "fields": {
+        "group": ["Corporate Editor"],
+        "page": 7,
+        "permission_type": "edit"
+    }
+},
+{
+    "pk": 8,
+    "model": "wagtailcore.grouppagepermission",
+    "fields": {
+        "group": ["Corporate Editor"],
+        "page": 15,
+        "permission_type": "add"
     }
 },
 {
@@ -830,6 +861,24 @@
         "user_permissions": [],
         "password": "md5$seasalt$1e9bf2bf5606aa5c39852cc30f0f6f22",
         "email": "admin_only_user@example.com"
+    }
+},
+{
+    "pk": 7,
+    "model": "customuser.customuser",
+    "fields": {
+        "username": "corporateeditor",
+        "first_name": "",
+        "last_name": "",
+        "is_active": true,
+        "is_superuser": false,
+        "is_staff": false,
+        "groups": [
+            ["Corporate Editor"]
+        ],
+        "user_permissions": [],
+        "password": "md5$seasalt$1e9bf2bf5606aa5c39852cc30f0f6f22",
+        "email": "corporateeditor@example.com"
     }
 },
 {
